made landing bg fade, spacing fixes

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -41,7 +41,8 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity here */
+    background-color: rgba(0, 0, 0, 0.5);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, .1), rgba(0, 0, 0, .1), rgba(0, 0, 0, .1), rgba(0, 0, 0, 1));
     z-index: 1;
 }
 
@@ -225,7 +226,7 @@ section.home-join-section{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 145vh;
     background-color: black;
     color: white;
 }
@@ -268,7 +269,7 @@ section.home-join-section button.become-a-sponsor-button:hover{
 /* Sponsors */
 
 .home-sponsors{
-    height: 100vh;
+    height: 145vh;
     background-color: black;
     color: white;
     display: flex;
